[package]
name = "drive_backup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-stream = "0.3.5"
async-trait = "0.1.77"
base64 = "0.21.7"
chrono = "0.4.33"
dotenvy = "0.15.7"
futures-util = "0.3.30"
flate2 = "1.0"
glob = "0.3.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
mockall = "0.12.1"
num_cpus = "1.0"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7", features = [ "chrono", "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["full", "macros"] }
tokio-stream = "0.1"
tokio-util = "0.7.10"